# slowphase-okr

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  example_gazeTime.txt  example_rotatedGaze.txt  make_example_data.py
src/slowphase_okr/: __init__.py  __main__.py  annotator.py  autosave.py  detect.py  export.py  fit.py  gaze.py  okr_log.py  prefs.py
tests/: test_core.py
