[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slowphase-okr"
version = "0.1.1"
description = "Manual slow-phase annotation tool for OKR gain estimation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Jonathan Huang" },
]
keywords = ["okr", "eye-tracking", "slow-phase", "vestibular", "annotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
slowphase-okr = "slowphase_okr.annotator:main"

[project.urls]
Homepage = "https://github.com/jonathanhuang/slowphase-okr"
Repository = "https://github.com/jonathanhuang/slowphase-okr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
